--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,9 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+            <version>9.5.0</version>
 			<scope>runtime</scope>
 		</dependency>
         <dependency>
