--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,12 +1,12 @@
-#spring.application.name=property-management
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.datasource.url=jdbc:h2:file:~/h2/pmsdb
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.platform=h2
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.application.name=property-management
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:file:~/h2/pmsdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.platform=h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
